Add support for translations. Add german translation.

--- a/software/web/main.ts.template
+++ b/software/web/main.ts.template
@@ -4,6 +4,8 @@ import "bootstrap";
 
 import feather = require("feather-icons");
 
+import Translator from '@andreasremdt/simple-translator';
+
 import {reboot} from "./ts/util";
 
 {{{module_imports}}}
@@ -11,6 +13,7 @@ import {reboot} from "./ts/util";
 interface Module {
     init(): any;
     addEventListeners(source: EventSource): any;
+    getTranslation(lang: string);
 }
 
 let modules: Module[] = [{{{modules}}}];
@@ -22,6 +25,23 @@ $('.navbar-collapse a').on("click", function () {
 
 $(function () {
     feather.replace();
+
+    let de = Object.assign({
+        "main": {
+            "navbar_status": "Status",
+            "content_status": "Status"
+        }
+    }, ...modules.map(m => m.getTranslation('de')));
+    let en = Object.assign({
+        "main": {
+            "navbar_status": "Status",
+            "content_status": "Status"
+        }
+    }, ...modules.map(m => m.getTranslation('en')));
+
+    var translator = new Translator();
+
+    translator.add('de', de).add('en', en).translatePageTo();
 
     for (let m of modules) {
         m.init();
