--- a/software/web/package.json
+++ b/software/web/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "author": "Erik Fleckstein",
   "dependencies": {
+    "@andreasremdt/simple-translator": "^2.0.3",
     "bootstrap": "^4.5.0",
     "bs-custom-file-input": "^1.3.4",
     "feather-icons": "^4.28.0",
