--- a/software/main.cpp.template
+++ b/software/main.cpp.template
@@ -23,6 +23,8 @@
 
 #include "esp_spiffs.h"
 
+#include "api.h"
+
 #define GREEN_LED 4
 #define BLUE_LED 32
 
@@ -31,6 +33,8 @@ AsyncEventSource events("/events");
 
 TF_HalContext hal;
 {{{module_decls}}}
+
+API api{true, true, true};
 
 uint32_t uid_numeric = 0;
 char uid[7] = {0};
@@ -63,6 +67,9 @@ TF_Port ports[6] = {{
     }
 };
 
+Config version;
+Config modules;
+
 int check(int rc,const char *msg) {
     if (rc >= 0)
         return rc;
@@ -74,8 +81,6 @@ int check(int rc,const char *msg) {
     delay(10);
     return rc;
 }
-
-Config version;
 
 void read_efuses(uint32_t *ret_uid_numeric, char *ret_uid_string, char *ret_passphrase_string) {
     uint32_t blocks[8] = {0};
@@ -134,7 +139,6 @@ void read_efuses(uint32_t *ret_uid_numeric, char *ret_uid_string, char *ret_pass
             printf("malformed passphrase! \n");
         } else {
             memcpy(ret_passphrase_string + i * 5, buf, 4);
-
         }
     }
     tf_base58_encode(uid, ret_uid_string);
@@ -184,6 +188,8 @@ void read_firmware_version() {
     });
 }
 
+Config reboot;
+
 void register_default_urls() {
     server.onNotFound([](AsyncWebServerRequest *request) {
         if (request->method() == HTTP_OPTIONS)
@@ -209,23 +215,24 @@ void register_default_urls() {
         request->send(response);
     });
 
-     server.on("/reboot", HTTP_ANY, [](AsyncWebServerRequest *request) {
-        task_scheduler.scheduleOnce("reboot", [](){ESP.restart();}, 3000);
-        request->send(200, "text/html", "Will reboot in 3 seconds.");
+    reboot = Config::Null();
+    api.addCommand("reboot", &reboot, []() {
+        ESP.restart();
     });
+
+    api.addState("version", &version, {}, 10000);
+    api.addState("modules", &modules, {}, 10000);
 
     server.on("/force_reboot", HTTP_ANY, [](AsyncWebServerRequest *request) {
         ESP.restart();
         request->send(200, "text/html", "Forced reboot.");
     });
 
-    server.on("/version", HTTP_GET, [](AsyncWebServerRequest *request) {
-        request->send(200, "application/json", version.to_string());
-    });
-
     server.on("/uptime", HTTP_GET, [](AsyncWebServerRequest *request) {
         request->send(200, "text/html", String(millis()));
     });
+
+    api.registerDebugUrl();
 }
 
 void setup(void) {
@@ -234,10 +241,17 @@ void setup(void) {
     read_firmware_version();
 
     check(tf_hal_create(&hal, ports, sizeof(ports)/sizeof(ports[0])), "hal create");
+    tf_hal_set_timeout(&hal, 100000);
 
     read_efuses(&uid_numeric, uid, passphrase);
 
+    api.setup();
+
     {{{module_setup}}}
+
+    modules = Config::Object({
+        {{{module_init_config}}}
+    });
 
     register_default_urls();
 
@@ -257,11 +271,10 @@ void setup(void) {
         if(client->lastId()){
             Serial.printf("Client reconnected! Last message ID that it got is: %u\n", client->lastId());
         }
-        {
-            String version_str = version.to_string();
-            client->send(version_str.c_str(), "version", millis(), 1000);
-        }
+
         {{{module_on_event_connect}}}
+
+        api.onEventConnect(client);
     });
 
     server.addHandler(&events);
