firmware_update: Block updates if requested by other module.

--- a/software/main.cpp.template
+++ b/software/main.cpp.template
@@ -39,6 +39,7 @@ API api{true, true, true};
 uint32_t uid_numeric = 0;
 char uid[7] = {0};
 char passphrase[20] = {0};
+bool firmware_update_allowed = true;
 
 TF_Port ports[6] = {{
         .chip_select_pin = 16,
