--- a/software/modules/backend/authentication/login_page_ignored/package.json
+++ b/software/modules/backend/authentication/login_page_ignored/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0"
   },
   "devDependencies": {
+    "@mr-hope/gulp-sass": "^2.0.0",
     "autoprefixer": "^9.8.0",
     "browserify": "^16.5.2",
     "cssnano": "^4.1.10",
@@ -23,13 +24,12 @@
     "gulp-postcss": "^8.0.0",
     "gulp-purgecss": "^2.3.0",
     "gulp-run-command": "0.0.10",
-    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-string-replace": "^1.1.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^5.0.0",
     "purgecss": "^2.1.2",
+    "sass": "^1.32.12",
     "tsify": "^5.0.2",
     "typescript": "^4.0.2",
     "vinyl-buffer": "^1.0.1",
